--- a/week1/calculatorAssignment.ipynb
+++ b/week1/calculatorAssignment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code down here:\n"
+    "# code down here:\n",
+    "\n",
+    "# calculator function\n",
+    "def calculator():\n",
+    "    \n",
+    "# get user input operator\n",
+    "# how do you get the input to not appear in the string output?\n",
+    "    user_input = input('Please select an operator. \"+\" or \"-\" or \"*\" or \"/\"  ')\n",
+    "    \n",
+    "#user input figures\n",
+    "    x = int(input('Enter Number '))\n",
+    "    y = int(input('Enter Second Number '))\n",
+    "\n",
+    "#Calculations\n",
+    "\n",
+    "    if (user_input=='+'):\n",
+    "        print(x, '+', y, '=', x+y)\n",
+    "    elif(user_input=='-'):\n",
+    "        print(x, '-', y, '=', x-y)\n",
+    "    elif(user_input=='*'):\n",
+    "        print(x, 'x', y, '=', x*y)\n",
+    "    elif(user_input=='/'):\n",
+    "        print(x, '/', y, '=', x/y)\n",
+    "    else: print('Operator option not available')\n",
+    "\n",
+    "    #call repeat function with indent\n",
+    "    repeat()\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# continue function\n",
+    "         \n",
+    "def repeat():\n",
+    "#calculator end?\n",
+    "    continue_calculation= input(\"Another calculation? yes or no\")\n",
+    "    if (continue_calculation=='yes'):\n",
+    "        calculator()\n",
+    "    elif(continue_calculation=='no'):\n",
+    "        print(\"End of calculator\")        \n",
+    "    else:\n",
+    "        print('Please choose either yes or no')\n",
+    "        # if input is not one of the options, function repeat\n",
+    "        repeat()\n",
+    "        \n",
+    "calculator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -67,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
